fix: harden execution and build contracts